--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "i18next": "^17.0.18",
+    "i18next-browser-languagedetector": "^3.0.3",
+    "i18next-xhr-backend": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-i18next": "^10.13.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
